--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .pause {
+    animation-play-state: paused;
+  }
+}
+
 .swiper {
   width: 95%;
   height: 100%;
@@ -38,4 +44,13 @@
   --swiper-pagination-bottom: 0;
 
   color: #292929;
+}
+
+@keyframes slide {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
 }
