Logo animated list

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,11 +46,11 @@
   color: #292929;
 }
 
-@keyframes slide {
-  from {
-    transform: translateX(0);
+@keyframes scroll {
+  0% {
+    transform: translateX(0px);
   }
-  to {
-    transform: translateX(-100%);
+  100% {
+    transform: translateX(calc(-150px * 5));
   }
 }
