--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html {
+    font-family: Lato, system-ui, sans-serif;
+  }
+}
+
 @layer utilities {
   .pause {
     animation-play-state: paused;
