--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,12 +68,23 @@
 }
 
 @keyframes scroll {
-  0% {
+  from {
     transform: translateX(0px);
   }
-  100% {
-    transform: translateX(calc(-150px * 5));
+  to {
+    transform: translateX(-100%);
   }
+}
+
+.looper__innerList[data-animate="true"] .looper__listInstance {
+  animation: scroll linear infinite;
+}
+
+.looper__listInstance {
+  display: flex;
+  width: max-content;
+
+  animation: none;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
