--- a/styles/globals.css
+++ b/styles/globals.css
@@ -88,12 +88,14 @@
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-.carousel::-webkit-scrollbar {
+.carousel::-webkit-scrollbar,
+.looper__listInstance::-webkit-scrollbar {
   display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
-.carousel {
+.carousel,
+.looper__listInstance {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
