--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,47 +67,73 @@
   --black: #2b2d42;
   --white: #fff;
   --thumb: #edf2f4;
+
+  --color-text: navy;
+  --color-bg: papayawhip;
+  --color-bg-accent: #ecdcc0;
+  --size: clamp(10rem, 1rem + 40vmin, 30rem);
+  --gap: calc(var(--size) / 40);
+  --duration: 60s;
+  --scroll-start: 0;
+  --scroll-end: calc(-100% - var(--gap));
+
+
 }
 
-@keyframes scroll {
+.marquee {
+  display: flex;
+  overflow: hidden;
+  user-select: none;
+  gap: var(--gap);
+  mask-image: linear-gradient(var(--mask-direction, to right),
+      hsl(0 0% 0% / 0),
+      hsl(0 0% 0% / 1) 20%,
+      hsl(0 0% 0% / 1) 80%,
+      hsl(0 0% 0% / 0));
+}
+
+.marquee__group {
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: var(--gap);
+  min-width: 100%;
+  animation: scroll-x var(--duration) linear infinite;
+  position: relative;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .marquee__group {
+    animation-play-state: paused;
+  }
+}
+
+
+@keyframes scroll-x {
   from {
-    transform: translateX(0px);
+    transform: translateX(var(--scroll-start));
   }
 
   to {
-    transform: translateX(-100%);
+    transform: translateX(var(--scroll-end));
   }
 }
 
-.looper__innerList[data-animate="true"] .looper__listInstance {
-  animation: scroll linear infinite;
+
+.svg {
+  /* width: calc(var(--size) / 1.5); */
+  /* padding: calc(var(--size) / 6); */
 }
 
-.looper__listInstance {
-  display: flex;
-  width: max-content;
-
-  animation: none;
+@keyframes fade {
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
 .carousel::-webkit-scrollbar,
 .looper__listInstance::-webkit-scrollbar {
   display: none;
 }
-
-/* Hide scrollbar for IE, Edge and Firefox */
-.carousel,
-.looper__listInstance {
-  -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
-  /* Firefox */
-}
-
-
-/* input[type="date"]::-webkit-inner-spin-button,
-input[type="date"]::-webkit-calendar-picker-indicator {
-  display: none;
-  -webkit-appearance: none;
-} */
